--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cjs-module": "^1.5.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "generate-safe-id": "^1.0.3",
     "git": "^0.1.5",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
     "routes": "^2.1.0",
     "save": "^2.9.0",
+    "util": "^0.12.5",
     "uuid": "^9.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sujith-juego/libraryManagementTraining.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sujith-juego/libraryManagementTraining/issues"
+  },
+  "homepage": "https://github.com/sujith-juego/libraryManagementTraining#readme"
 }
