--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/jwt": "^10.0.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cjs-module": "^1.5.0",
@@ -21,10 +23,13 @@
     "generate-safe-id": "^1.0.3",
     "git": "^0.1.5",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.21",
+    "process": "^0.11.10",
+    "reflect-metadata": "^0.1.13",
     "routes": "^2.1.0",
+    "rxjs": "^7.8.0",
     "save": "^2.9.0",
     "util": "^0.12.5",
     "uuid": "^9.0.0"
@@ -36,5 +41,6 @@
   "bugs": {
     "url": "https://github.com/sujith-juego/libraryManagementTraining/issues"
   },
-  "homepage": "https://github.com/sujith-juego/libraryManagementTraining#readme"
+  "homepage": "https://github.com/sujith-juego/libraryManagementTraining#readme",
+  "devDependencies": {}
 }
